clean seq, ParallelReadyTilingDrawerTest ko